1. add new file for creating a list/task 2. add functions that display all of the created lists in main.html 3. add functions that display all of the tasks inside the list 4. add stylings to list.html, task.html and main.html (displaying lists) 5. fixed the margin and padding for the welcome message and make the lists and message align

--- a/styles/main.css
+++ b/styles/main.css
@@ -2,6 +2,10 @@ body {
   background-color: #bbffd2;
 }
 
+main {
+  margin: 1rem;
+}
+
 .bottom-nav {
   background-color: rgba(61, 61, 61, 0.1);
   display: flex;
@@ -145,6 +149,39 @@ main a {
   }
 }
 
+/* Displaying List Container */
+.lists-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.list-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: 2px solid black;
+  border-radius: 10px;
+  background-color: #ffefc1;
+  position: relative;
+  max-width: 25rem;
+  padding: 0.5rem;
+}
+
+.list-container .list-name {
+  margin: 0;
+}
+
+.list-container .list-link {
+  font-size: 1.75rem;
+  color: black;
+}
+
+.list-container .list-link:hover {
+  color: blue;
+  transition: color 0.25s ease;
+}
+
 .add-task,
 .add-list {
   opacity: 0;
@@ -202,5 +239,11 @@ footer {
 @keyframes footerFade {
   to {
     opacity: 1;
+  }
+}
+
+@media screen and (max-width: 786px) {
+  main {
+    margin: 1rem;
   }
 }
